--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html>
-
-  <head>
-    <title> LOGIN PAGE </title>
-  </head>
-
-  <body>
-    <h1>
-      STORY0
-    </h1>
-
-
+{% block body %}
     <h3>
       Enter your username below to proceed.
     </h3>
@@ -21,6 +10,4 @@
       <input type="submit" name="sub1">
     </form>
     <br>
-  </body>
-
-</html>
+{% endblock %}
