--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
     <h3>
       Enter your username below to proceed.
     </h3>
-    <form action="/auth">
+    <form action="/login" method="POST">
       <input type="text" name="username">
       <input type="text" name="password">
       <input type="submit" name="sub1">
