--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,5 +9,6 @@
       <input type="text" name="password">
       <input type="submit" name="sub1">
     </form>
+    {{ error }}
     <br>
 {% endblock %}
