added signup page

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
-Homepage    
+
+<div class = content> 
+    This is the homepage our project. You will be able to navigate to the rest of webpages through here.
+</div>
 
 {% endblock %} 
