--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,8 +7,8 @@
 
     <form action="/signup" method="POST">
       <div class = "flex-container">
-      <div class = "user"> NEW USERNAME: <input type="text" name="username"> </div>
-      <div class = "pass"> NEW PASSWORD: <input type="text" name="password"> </div>
+      <div id = "user"> NEW USERNAME: <input type="text" name="nusername"> </div>
+      <div id = "pass"> NEW PASSWORD: <input type="text" name="npassword"> </div>
       <br>
       <div> <input type="submit" name="sub1"> </div>
       </div>
