Some work with registration

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
+<div><a href='/signup'> Sign-up </a></div>
 
 <div class = content> 
-    This is the homepage our project. You will be able to navigate to the rest of webpages through here.
+    This is the homepage of our project. You will be able to navigate to the rest of webpages through here.
 </div>
+
 
 {% endblock %} 
