--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,6 +15,6 @@
     </form>
     {{ error }}
     <br>
-    <div><a href='/signup'>Click Here to Create an account</a></div>
+    <div><a href='/signup'>Click here to create an account</a></div>
     <br>
 {% endblock %}
