--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,6 +1,21 @@
 {% extends "layout.html" %}
+
+{% block head %}
+    Homepage
+{% endblock %}
+
+{% block title %}
+    Homepage
+{% endblock %}
+
+{% block story_dropdown %}
+    {% for x in stories %}
+    <a href="/story/{{x}}">{{ x }}</a>
+    {% endfor %}
+{% endblock %}
+
+
 {% block body %}
-<div><a href='/signup'> Sign-up </a></div>
 
 <div class = content> 
     This is the homepage of our project. You will be able to navigate to the rest of webpages through here.
