--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,17 +1,24 @@
 {% extends "layout.html" %}
 
+{% block head %}
+  Register       
+{% endblock %}
+
+{% block title %}
+  Register     
+{% endblock %}
+
 {% block body %}
     <h3>
       Create your account below
     </h3>
 
     <form action="/signup" method="POST">
-      <div class = "flex-container">
-      <div id = "user"> NEW USERNAME: <input type="text" name="nusername"> </div>
-      <div id = "pass"> NEW PASSWORD: <input type="text" name="npassword"> </div>
+      <div id = "user"> NEW USERNAME: <input type="text" name="username" required> </div>
+      <div id = "pass"> NEW PASSWORD: <input type="password" name="password" required> </div>
+      <div id = "pass"> CONFIRM PASSWORD: <input type="password" name="password2" required> </div>
       <br>
-      <div> <input type="submit" name="sub1"> </div>
-      </div>
+      <input type="submit" name="sub1"> 
     </form>
     {{ error }}
     <br>
