--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -1,1 +1,17 @@
 {% extends "layout.html" %}
+
+{% block head %}
+    {{ title }}        
+{% endblock %}
+
+{% block title %}
+    {{ title }}        
+{% endblock %}
+
+
+{% block body %}
+    {{ title }}
+    123
+    {{ content }}
+{% endblock %} 
+
