--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
       <div id = "user"> USERNAME: <input type="text" name="username"> </div>
       <div id = "pass"> PASSWORD: <input type="text" name="password"> </div>
       <br>
-      <div> <input type="submit" name="sub1"> </div>
+      <div> <input type="submit"> </div>
     </form>
     {{ error }}
     <br>
