--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,9 +31,8 @@
             <div class = "item"><a href='/edit'>New Story</a></div>
             {% else %}
             <div class = "item"><a href='/login'>Login</a></div>
-            <div class = "item"><a href='/'>Register</a></div>
+            <div class = "item"><a href='/signup'>Register</a></div>
 
-            <div class = "item"><a href='/edit'>New Story</a></div>
             {% endif %}
         </div> 
     </head>
