--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,6 +8,11 @@
   Login     
 {% endblock %}
 
+{% block story_dropdown %}
+    {% for x in stories %}
+    <a href="/story/{{x}}">{{ x }}</a>
+    {% endfor %}
+{% endblock %}
 
 {% block body %}
     <h3>
