--- a/app/static/style.css
+++ b/app/static/style.css
@@ -2,25 +2,40 @@ h1 {
     text-align: center;
 }
 
-
-.block {
-    display: block;
-    width: 100%;
-    border: none;
+.block{
+    display: flex;
+    flex-direction: row;
 }
+
+.btn {
+    width:100%;
+    height:100%;
+    padding: 15px 0px;
+}
+
 
 .dropdown {
     display: inline-block;
     position: relative; /* allows each element in dropdown to stack on top of each other */
+    background-color:aliceblue;
+    width:100%;
+    height:100%;
 }
 
 .dropdown-content {
     display: none; /* makes dropdown content not visible */
     position: absolute; /* prevents dropdown from changing the rest of the layout */
+    z-index: 1;
+    background-color: antiquewhite;
   }
+
+.dropdown-content a {
+    display: block; /*prevents items from overlap(was a very serious issue </3) */
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
+    width:100%
 }
 
 
@@ -32,8 +47,32 @@ h1 {
 }
 
 .item {
-    flex-grow:1;
+    flex-grow: 1;
+    height:100%;
     text-align: center;
+    background-color: aliceblue;
+}
+
+.item:hover {
+    background-color:aqua;
+}
+
+.item a:link {
+    text-decoration: none;
+    color: black;
+}
+
+.item a:link {
+    text-decoration: none;
+    color: black;
+}
+
+.item a:visited {
+    color: black;
+}
+
+.item a:active {
+    color: black;
 }
 
 .content {
