--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -19,7 +19,7 @@
 
 {% block story_dropdown %}
     {% for x in stories %}
-    <a href="/story/{{x}}">{{ x }}</a>
+    <a href="/story/{{x}}"><div class="btn">{{ x }}</div></a>
     {% endfor %}
 {% endblock %}
 
