--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
 
 {% block story_dropdown %}
     {% for x in stories %}
-    <a href="/story/{{x}}">{{ x }}</a>
+    <a href="/story/{{x}}"><div class="btn">{{ x }}</div></a>
     {% endfor %}
 {% endblock %}
 
