--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,11 @@
 
 {% block story_dropdown %}
     {% for x in stories %}
-    <a href="/story/{{x}}"><div class="btn">{{ x }}</div></a>
+    <a href="/story/{{x}}">
+      <div class="item">
+          <div class="btn">{{ x }}</div>
+      </div>
+    </a>
     {% endfor %}
 {% endblock %}
 
@@ -20,12 +24,16 @@
     </h3>
 
     <form action="/signup" method="POST">
-      <div id = "user"> NEW USERNAME: <input type="text" name="username" required> </div>
-      <div id = "pass"> NEW PASSWORD: <input type="password" name="password" required> </div>
-      <div id = "pass"> CONFIRM PASSWORD: <input type="password" name="password2" required> </div>
+      Username: 
+      <input type="text" class="content" name="username" placeholder="Enter new username" required>
+      <br>
+      Password: 
+      <input type="password" class="content" name="password" placeholder="Enter new password"required>
+      <br>
+      Confirm: 
+      <input type="password" class="content" name="password2" placeholder="Confirm new password"required>
       <br>
       <input type="submit" name="sub1"> 
     </form>
-    {{ error }}
-    <br>
+    <p>{{ error }}</p>
 {% endblock %}
