--- a/app/static/style.css
+++ b/app/static/style.css
@@ -20,7 +20,12 @@ p {
     white-space: pre-wrap;
 }
 
-
+.story{
+    text-align: left;
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .block{
     display: flex;
