--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -20,8 +20,8 @@
 
 {% block body %}
     <h2>{{ title }}</h2>
-    <h3>By {{ user }}</h3>
-    <h3>Last edited by {{ recentuser }}</h3>
+    <h3>By {{ user }} on {{ original_date }}</h3>
+    <h3>Last edited by {{ recentuser }} on {{ recent_date }}</h3>
     <div class="story">
         <p>{{ content }}</p>
     </div>
