--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -56,7 +56,7 @@
         <textarea class="content" name="content" placeholder="Type here..." cols="100" rows="20" required></textarea>
         <input type="hidden" name="new" id="new" value="True">
         <br>
-        <input type="submit" value="Create">
+        <input type="submit" value="Create" id="create_btn">
     </form>
 
 
