--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -33,7 +33,7 @@
       Confirm: 
       <input type="password" class="content" name="password2" placeholder="Confirm new password"required>
       <br>
-      <input type="submit" name="sub1"> 
+      <div class="content"><input type="submit" class="submit_btn"> </div>
     </form>
     <p>{{ error }}</p>
 {% endblock %}
