--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -32,7 +32,7 @@
         {% else %}
         <form action="/edit" method="GET">
             <input type="hidden" name="title" id="title" value="{{ title }}">
-            <input type="submit" value="Edit">
+            <input type="submit" id="edit_btn" value="Edit">
         </form>
         {% endif %}
     {% endif %}
