--- a/app/static/style.css
+++ b/app/static/style.css
@@ -39,6 +39,27 @@ p {
     font-size:15px;
 }
 
+#edit_btn {
+    width:80%;
+    height:100%;
+    padding: 15px 0px;
+    font-size:15px;
+}
+
+#create_btn {
+    width:60%;
+    height:100%;
+    padding: 15px 0px;
+    font-size:15px;
+}
+
+.submit_btn {
+    width:250px;
+    padding: 5px 0px;
+    font-size:15px;
+}
+
+
 .watchlist {
     margin-left: auto;
     margin-right: auto;
@@ -115,8 +136,4 @@ p {
 
 .content {
     margin: 10px;
-}
-
-#user {
-    margin-bottom: 0.25rem;
 }
