--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,7 +28,7 @@
       <br>
       Password: <input type="password" class="content" name="password" placeholder="Enter password" required> 
       <br>
-      <input type="submit"> 
+      <div class="content"><input type="submit" class="submit_btn"> </div>
     </form>
     <p>{{ error }}</p>
     <p>No account? Click <a href='/signup'>here</a></p>
